# VIGIL

./: .gitignore  README.md  index.html  main.py  pyproject.toml  pytest.ini  requirements.txt
templates/: report.html.j2
tests/: test_filters.py  test_main_utils.py
tests/integration/: test_scan_smoke.py
vigil/: __init__.py  cli.py  filters.py  models.py  pipeline.py  reporting.py  scan.py  utils.py
